--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 eth_pairings = {git = "https://github.com/matter-labs/eip1962.git", branch = "fuzzer"}
 eth_pairings_go_2537 = {git = "https://github.com/shamatar/eip2537_go_bindings", features = ["adx_backend"]}
+eth_pairings_go_2539 = {git = "https://github.com/prestwich/eip2539_go_bindings", features = ["adx_backend"], branch = "prestwich/eip2539"}
 # eth_pairings = {path = "../eip1962", features = ["expose_inner", "eip_2537"] }
 lain = "0.5"
 derivative = "2.1"
