--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,14 @@ name = "algebraic_fuzzer"
 version = "0.1.0"
 authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
 edition = "2018"
+default-run = "eip2537"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 eth_pairings = {git = "https://github.com/matter-labs/eip1962.git", branch = "fuzzer"}
-eth_pairings_go_2537 = {git = "https://github.com/shamatar/eip2537_go_bindings", features = ["adx_backend"]}
-eth_pairings_go_2539 = {git = "https://github.com/prestwich/eip2539_go_bindings", features = ["adx_backend"], branch = "prestwich/eip2539"}
+eth_pairings_go_2537 = {git = "https://github.com/shamatar/eip2537_go_bindings", features = ["adx_backend"], optional = true}
+eth_pairings_go_2539 = {git = "https://github.com/prestwich/eip2539_go_bindings", features = ["adx_backend"], branch = "prestwich/eip2539", optional = true}
 # eth_pairings = {path = "../eip1962", features = ["expose_inner", "eip_2537"] }
 lain = "0.5"
 derivative = "2.1"
@@ -20,8 +21,21 @@ ctrlc = "3.1"
 hex = "0.4"
 console = "0.12"
 
+[features]
+default = ["eip2537"]
+eip2537 = ["eth_pairings_go_2537"]
+eip2539 = ["eth_pairings_go_2539"]
+
 [[bin]]
 name = "eip2537"
 path = "bin/eip2537.rs" 
 test = false
 bench = false
+required-features = ["eip2537"]
+
+[[bin]]
+name = "eip2539"
+path = "bin/eip2539.rs" 
+test = false
+bench = false
+required-features = ["eip2539"]
