feature: invalid subgroup checks for eip2539

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ default-run = "eip2537"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eth_pairings = {git = "https://github.com/matter-labs/eip1962.git", branch = "fuzzer"}
+eth_pairings = {git = "https://github.com/matter-labs/eip1962.git", branch = "sqrt_1_mod_16"}
 eth_pairings_go_2537 = {git = "https://github.com/shamatar/eip2537_go_bindings", features = ["adx_backend"], optional = true}
 eth_pairings_go_2539 = {git = "https://github.com/prestwich/eip2539_go_bindings", features = ["adx_backend"], branch = "prestwich/eip2539", optional = true}
 # eth_pairings = {path = "../eip1962", features = ["expose_inner", "eip_2537"] }
